[package]
name = "rust-l1"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
tokio-tungstenite = "0.26.2"
futures-util = "0.3"
prost = "0.13.5"
bytes = "1.5"
url = "2.5"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2.171"
cxx = "1.0.150"
kiss3d = "0.35.0"
nalgebra = { version = "0.33.2", features = ["serde-serialize"] }
dbscan = "0.3.1"
image = "0.25.6"
clap = { version = "4.5", features = ["derive"] }

[build-dependencies]
bindgen = "0.71.1"
cc = "1.2.17"
cxx-build = "1.0.150"
