[package]
name = "rust-l1"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
futures-util = "0.3"
libc = "0.2.171"
cxx = "1.0.150"
kiss3d = "0.35.0"
nalgebra = { version = "0.33.2", features = ["serde-serialize"] }
dbscan = "0.3.1"

[build-dependencies]
cc = "1.2.17"
cxx-build = "1.0.150"
